# aqa-publisher

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  pub_key.asc
.github/workflows/: ci.yml
src/: lib.rs  utils.rs
src/chain/: api.rs  mod.rs  signing.rs  types.rs
src/sources/: csv.rs  de.rs  fred.rs  mod.rs  nyfed.rs  ofr.rs
tests/: average_computation.rs  median_aggregator.rs  source_comparison.rs
