[package]
name = "aqa_publisher"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Aligned Quote Asset (AQA) rate publisher"
homepage = "https://nativemarkets.com"
readme = "README.md"
documentation = "https://github.com/native-markets/aqa-publisher"
repository = "https://github.com/native-markets/aqa-publisher"

[dependencies]
anyhow = "1.0"
chrono = "0.4.42"
csv = "1.3.1"
reqwest = { version = "0.12", features = ["blocking"] }
rust_decimal = "1.38.0"
rust_decimal_macros = "1.38.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.41", features = ["full"] }
dotenvy = "0.15"
alloy = "1.1.1"
alloy-signer = "1.1.1"
rmp-serde = "1.3.0"
log = "0.4.28"
env_logger = "0.11"

[dev-dependencies]
rayon = "1.10"
rust_decimal_macros = "1.38.0"
